# TalentIQ_Agentic

./: .editorconfig  .gitignore  TO_DO.md  _check_diskann.py  _diag_pg_probe.py  _fix_titles.py  _tmp_dumplines.ps1  _tmp_inspect.ps1  _tmp_inspect2.ps1  _tmp_inspect3.ps1  _tmp_normalize.ps1  _tmp_parsecheck.ps1  _tmp_quotes.ps1  pg_entra_auth.md  pyproject.toml  run_all.py
.squad/: ceremonies.md  (+5 more)
talent_backend/: .dockerignore  Dockerfile  Dockerfile.mcp  pyproject.toml
talent_backend/talent_backend/: __init__.py  __main__.py  api.py  auth.py  chat_history.py  config.py  file_handler.py  pg_entra.py  pipeline_logger.py
talent_backend/talent_backend/agent/: __init__.py
talent_backend/talent_backend/mcp_server/: __init__.py  __main__.py  _employee_search.py.disabled  app.py  cv_generator.py  cypher_rewriter.py  entity_tools.py  graph_tools.py  helpers.py  pg_age_helper.py  schema.py  server.py  vector_tools.py
talent_data_pipeline/: DATA_LOADING.md  config.py  connectivity_test.py  main.py  pyproject.toml  validate.py
talent_data_pipeline/generators/: base.py  edge_generator.py  embedding_generator.py  employee_generator.py
talent_data_pipeline/loaders/: base_loader.py  fts_loader.py  graph_loader.py  vector_loader.py
talent_data_pipeline/schema/: create_indexes.py  create_relational_tables.py
talent_data_pipeline/talent_data_pipeline/: __init__.py  checkpoint.py  config.py  connectivity_test.py  generate.py  load.py  main.py  pg_entra.py  validate.py
talent_data_pipeline/talent_data_pipeline/generators/: edge_generator.py  embedding_generator.py  employee_generator.py  reference_data.py  resume_generator.py
talent_data_pipeline/talent_data_pipeline/loaders/: base_loader.py  entity_search_loader.py  fts_loader.py  graph_loader.py  vector_loader.py
(+298 files in other folders)
