[project]
name = "talent_backend"
version = "0.1.0"
description = "TalentIQ Backend — MCP Server + Agent Layer"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "azure-identity>=1.19",
    "starlette>=0.45",
    "agent-framework>=1.3.0",
    "azure-cosmos>=4.7",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talent_backend"]
