[project]
name = "talent-data-pipeline"
version = "1.0.0"
description = "TalentIQ synthetic data generation and database loading pipeline"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "faker>=28.0.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "azure-identity>=1.16.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talent_data_pipeline"]
